Novas modificações no layout do Admin.

--- a/xmlPOVerification/verificacao/static/css/adminextra.css
+++ b/xmlPOVerification/verificacao/static/css/adminextra.css
@@ -18,3 +18,15 @@ div.breadcrumbs {
 a:link, a:visited {
     color: #4c4c4c;
 }
+
+input[name="_continue"] {
+    display: none;
+}
+
+input[name="_addanother"] {
+    display: none;
+}
+
+input[name="_save"] {
+    display: none;
+}
