Modificações no front.

--- a/xmlPOVerification/templates/admin/base_site.html
+++ b/xmlPOVerification/templates/admin/base_site.html
@@ -18,3 +18,7 @@
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
+
+{% block extrascript %}
+    <script type="application/javascript" href="{% static 'js/script.css' %}"></script>
+{% endblock %}
