--- a/xmlPOVerification/templates/admin/verificacao/change_form.html
+++ b/xmlPOVerification/templates/admin/verificacao/change_form.html
@@ -3,6 +3,6 @@
 {% block submit_buttons_bottom %}
     {{ block.super }}
     <div class="submit-row">
-        <input type="submit" value="Verificar" name="_make-unique">
+        <input type="submit" value="Verificar" name="_verificar">
     </div>
 {% endblock %}
