--- a/xmlPOVerification/templates/admin/verificacao/change_form.html
+++ b/xmlPOVerification/templates/admin/verificacao/change_form.html
@@ -3,6 +3,11 @@
 {% block submit_buttons_bottom %}
     {{ block.super }}
     <div class="submit-row">
-        <input type="submit" value="Verificar" name="_verificar">
+        <button onclick="location.href='{% url 'script' %}'" name="_verificar">Verificar</button>  <hr>
+        {% if data %}
+        
+            {{data | safe}}
+
+        {% endif %}
     </div>
 {% endblock %}
