--- a/xmlPOVerification/verificacao/static/css/adminextra.css
+++ b/xmlPOVerification/verificacao/static/css/adminextra.css
@@ -31,10 +31,17 @@ a:link, a:visited {
     display: none;
 } 
 
-input[name="_verificar"] {
+button#_verificar {
     background: #5a1e82;
     font-size: 1.2em;
     font-weight: bolder;
+    font-family: Arial;
+    font-weight: bolder;
+    color: white;
+    padding: 10px;
+    float: left;
+    border-radius: 5px;
+    border: none;
 }
 
 form .submit-row {
